apps/nginx/overlays/dev/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gerarbem-dev
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/gerarbem`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: gerarbem-dev-strip-prefix
